Fix Issues in Transcription View
- Fixed apparent misalignment of the spinners and the choice boxes
- Fixed volume slider updating before the spectrogram has fully loaded

--- a/src/main/resources/site/overwrite/auditranscribe/views/css/base.css
+++ b/src/main/resources/site/overwrite/auditranscribe/views/css/base.css
@@ -118,3 +118,7 @@
 .playhead-line {
     -fx-stroke-width: 5px;
 }
+
+.volume-slider .track {
+    -fx-background-color: linear-gradient(to right, -slider-filled-colour 50%, -slider-unfilled-colour 50%);
+}
